force-app/main/default/objects/SFDC_Request__c/SFDC_Request__c.object-meta.xml
<CustomObject>
    <description>Use post-launch for end-users to provide feedback and enhancement request for Salesforce.</description>
    <label>SFDC Request</label>
    <nameField>
        <displayFormat>SFDC Request ID-{0}</displayFormat>
        <label>SFDC ER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>