force-app/main/default/objects/SFDC_Request__c/fields/Parent_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Request</label>
    <referenceTo>SFDC_Request__c</referenceTo>
    <relationshipLabel>Children SFDC Requests</relationshipLabel>
    <relationshipName>Child_SFDC_Enhancement_Request</relationshipName>
    <type>Lookup</type>
</CustomField>