force-app/main/default/objects/SFDC_Request__c/fields/Reported_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_Role__c</fullName>
    <formula>Reported_By__r.Sales_Analysis_Territory2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported By Role</label>
    <type>Text</type>
</CustomField>