force-app/main/default/objects/SFDC_Request__c/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <inlineHelpText>Please describe your request, give as much detail as possible ... screenshots are even helpful!  Attach screenshots in the Notes &amp; Attachments Section.</inlineHelpText>
    <label>Request Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>