force-app/main/default/objects/SFDC_Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Assigned for analysis</fullName>
            </value>
            <value>
                <fullName>Analysis completed</fullName>
            </value>
            <value>
                <fullName>Request accepted</fullName>
            </value>
            <value>
                <fullName>Request rejected</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Pending Validation</fullName>
            </value>
            <value>
                <fullName>Deployed/Closed</fullName>
            </value>
            <value>
                <fullName>Deferred: Future Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>