force-app/main/default/objects/SFDC_Request__c/fields/Request_Summary__c.field-meta.xml
<CustomField>
    <fullName>Request_Summary__c</fullName>
    <label>Request Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>