force-app/main/default/objects/SFDC_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Screen Layout</fullName>
            </value>
            <value>
                <fullName>Standard Functionality</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>Data - SK&amp;A</fullName>
            </value>
            <value>
                <fullName>Data - MDM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>