force-app/main/default/objects/SFDC_Request__c/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <label>Resolution Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>