force-app/main/default/objects/SFDC_Request__c/fields/Resolution_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Next_Steps__c</fullName>
    <label>Resolution Next Steps</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>