force-app/main/default/objects/SFDC_Request__c/validationRules/AssignedToRequredWhenStatusIsAssigned_WA.validationRule-meta.xml
<ValidationRule>
    <fullName>AssignedToRequredWhenStatusIsAssigned_WA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Request_Status__c,&quot;Assigned for analysis&quot;)
,(Assigned_To__c = null))</errorConditionFormula>
    <errorDisplayField>Assigned_To__c</errorDisplayField>
    <errorMessage>Assigned user required.</errorMessage>
</ValidationRule>