force-app/main/default/objects/SFDC_Request__c/listViews/Active_SFDC_Requests.listView-meta.xml
<ListView>
    <fullName>Active_SFDC_Requests</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Related_To__c</columns>
    <columns>Reported_By__c</columns>
    <columns>Reported_By_Role__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Request_Description__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Summary__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Resolution_Date__c</columns>
    <columns>Resolution_Comments__c</columns>
    <columns>Resolution_Next_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Assigned for analysis,Analysis completed,Request accepted,In progress</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Pending Validation</value>
    </filters>
    <label>Active SFDC Requests</label>
</ListView>