force-app/main/default/objects/SFDC_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Summary__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Reported_By__c</columns>
    <columns>Priority__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Related_To__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Resolution_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>