force-app/main/default/objects/SFDC_Request__c/listViews/New_Non_Data.listView-meta.xml
<ListView>
    <fullName>New_Non_Data</fullName>
    <columns>NAME</columns>
    <columns>Reported_By__c</columns>
    <columns>Request_Summary__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>notEqual</operation>
        <value>Data,Data - SK&amp;A</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Request rejected,Deployed/Closed,Deferred: Future Phase</value>
    </filters>
    <label>New Non-Data</label>
</ListView>