force-app/main/default/objects/SFDC_Request__c/listViews/New_SFDC_Requests.listView-meta.xml
<ListView>
    <fullName>New_SFDC_Requests</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Related_To__c</columns>
    <columns>Reported_By__c</columns>
    <columns>Request_Description__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Summary__c</columns>
    <columns>Request_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New SFDC Requests</label>
</ListView>