force-app/main/default/objects/SFDC_Request__c/listViews/Open_SFDC_Requests.listView-meta.xml
<ListView>
    <fullName>Open_SFDC_Requests</fullName>
    <columns>NAME</columns>
    <columns>Reported_By__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Resolution_Date__c</columns>
    <columns>Request_Summary__c</columns>
    <columns>Request_Description__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Related_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Request rejected,Deployed/Closed</value>
    </filters>
    <label>Open SFDC Requests</label>
</ListView>