force-app/main/default/objects/SFDC_Request__c/listViews/SFDC_REQUESTS_TYPE_DATA_SKA.listView-meta.xml
<ListView>
    <fullName>SFDC_REQUESTS_TYPE_DATA_SKA</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Summary__c</columns>
    <columns>Resolution_Next_Steps__c</columns>
    <columns>Related_To__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Reported_By__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Description__c</columns>
    <columns>Resolution_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Data - SK&amp;A</value>
    </filters>
    <label>SFDC REQUESTS_TYPE = DATA SKA</label>
    <sharedTo>
        <group>CRM_Data_Steward</group>
    </sharedTo>
</ListView>